--- a/QtCreator/dolsoe/mainwindow.ui
+++ b/QtCreator/dolsoe/mainwindow.ui
@@ -53,7 +53,7 @@
        <item>
         <widget class="QPushButton" name="carryPB">
          <property name="text">
-          <string>짐나르기</string>
+          <string>따라오너라</string>
          </property>
         </widget>
        </item>
@@ -63,14 +63,14 @@
        <item>
         <widget class="QPushButton" name="tempPB">
          <property name="text">
-          <string>일시 정지</string>
+          <string>정지하거라</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="endCB">
          <property name="text">
-          <string>종료</string>
+          <string>종료하거라</string>
          </property>
         </widget>
        </item>
@@ -87,6 +87,32 @@
       </property>
       <property name="text">
        <string/>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="langKrPB">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>10</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>한국어</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="langEnPB">
+      <property name="geometry">
+       <rect>
+        <x>510</x>
+        <y>10</y>
+        <width>89</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>English</string>
       </property>
      </widget>
     </widget>
